k8s/delivery-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: delivery-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-db
  serviceName: delivery-db
  template:
    metadata:
      labels:
        app: delivery-db
    spec:
      containers:
        - image: mongo:6.0.5
          name: delivery-db
          ports:
            - containerPort: 27101
          volumeMounts:
            - mountPath: /data/db
              name: delivery-db-data
      restartPolicy: Always
      volumes:
        - name: delivery-db-data
          persistentVolumeClaim:
            claimName: delivery-db-data
