k8s/delivery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: SPRING_ACTIVE_PROFILES
              value: gmaps
            - name: GMAPS_API_KEY
              valueFrom:
                secretKeyRef:
                  name: gmaps-api-key
                  key: key
          image: ghcr.io/bartlomiejrasztabiga/thesis/delivery:latest
          name: delivery-service
          ports:
            - containerPort: 8104
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8104
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8104
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
