k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - env:
            - name: URI_RESTAURANT
              value: http://restaurant-service:8101
          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway
          name: gateway
          ports:
            - containerPort: 8100
      restartPolicy: Always
