k8s/order-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  serviceName: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - image: mongo:6.0.5
          name: order-db
          ports:
            - containerPort: 27101
          volumeMounts:
            - mountPath: /data/db
              name: order-db-data
      restartPolicy: Always
      volumes:
        - name: order-db-data
          persistentVolumeClaim:
            claimName: order-db-data
