k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: SPRING_DATA_MONGODB_HOST
              value: order-db
            - name: SPRING_DATA_MONGODB_PORT
              value: "27017"
            - name: SPRING_DATA_MONGODB_DATABASE
              value: order
            - name: SPRING_DATA_MONGODB_USERNAME
              value: root
            - name: SPRING_DATA_MONGODB_PASSWORD
              value: password
            - name: SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE
              value: admin
            - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
              value: http://zipkin.observability:9411/api/v2/spans
          image: ghcr.io/bartlomiejrasztabiga/thesis/order
          name: order-service
          ports:
            - containerPort: 8102
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8102
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8102
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
