k8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: SPRING_PROFILES_ACTIVE
              value: mailjet
            - name: MAILJET_API_KEY_PUBLIC
              valueFrom:
                secretKeyRef:
                  name: mailjet-api-key
                  key: public
            - name: MAILJET_API_KEY_PRIVATE
              valueFrom:
                secretKeyRef:
                  name: mailjet-api-key
                  key: private
          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:latest
          name: payment-service
          ports:
            - containerPort: 8103
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8103
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8103
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
