k8s/restaurant-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:0.1.2
          name: restaurant-service
          ports:
            - containerPort: 8101
      restartPolicy: Always
