k8s/saga-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: saga-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saga-db
  serviceName: saga-db
  template:
    metadata:
      labels:
        app: saga-db
    spec:
      containers:
        - image: mongo:6.0.5
          name: saga-db
          ports:
            - containerPort: 27101
          volumeMounts:
            - mountPath: /data/db
              name: saga-db-data
      restartPolicy: Always
      volumes:
        - name: saga-db-data
          persistentVolumeClaim:
            claimName: saga-db-data
