k8s/axonserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: axonserver
  name: axonserver
spec:
  ports:
    - name: "8024"
      port: 8024
      targetPort: 8024
    - name: "8124"
      port: 8124
      targetPort: 8124
    - name: "8224"
      port: 8224
      targetPort: 8224
  selector:
    io.kompose.service: axonserver
status:
  loadBalancer: {}
