k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: frontend
