k8s/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: order-db
