k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
    - name: "8102"
      port: 8102
      targetPort: 8102
  selector:
    io.kompose.service: order-service
status:
  loadBalancer: {}
