k8s/payment-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: payment-db
