k8s/query-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: query-db
