k8s/saga-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  ports:
    - name: "8106"
      port: 8106
      targetPort: 8106
  selector:
    app: query-service
